kubernetes/apps/communication/tuwunel/app/httproute.yaml
---
# 2. Map the exact path to the filter
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-well-known
spec:
  hostnames:
    - rnatr.com
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
  - matches:
    - path:
        type: Exact
        value: /.well-known/matrix/client
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: matrix-client-response
